--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <body>
     <div class="phone"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;Phone: 000-123-4567</div>
     <hr>
+
+    <!-- Header contains Logo and navigation icons -->
     <header>
         <div class="logo">
             Law Office
         </div>
+
+        <!-- Only visible on screens more tha or equal to 768px -->
         <div class="mobileMenu">
             <ul id="myLinks">
                 <li class="selected">Home</li>
@@ -24,6 +28,8 @@
                 <li>Contact</li>
             </ul>
         </div>
+
+        <!-- Mobile Menu, only visible in screens less than 765px -->
         <a href="javascript:void(0)" onclick="openNav()"><i class="fas fa-bars"></i></a>
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -35,6 +41,8 @@
             </div>
         </div>
     </header>
+
+    <!-- Jumbotron -->
     <div class="jumbotron">
         <div class="textDetail">
             <h1>Lorem ipsum dummy text</h1>
@@ -43,6 +51,8 @@
                 when looking at its layout.</p>
             <input type="button" value="Contact Us">
         </div>
+
+        <!-- Consultation Form -->
         <div class="consultation">
             <div>
                 <h2>Free Consultation</h2>
@@ -66,6 +76,7 @@
             </form>
         </div>
     </div>
+    
     <main>
         <h2>Law Office</h2>
         <div class="contents">
